# opendataframework

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
docs/: index.md
docs/stylesheets/: extra.css
search/: search_index.json
src/opendataframework/: README.md  __init__.py  __main__.py  build.sh  env.sh  expectations.py  main.sh  requirements.txt  setup.sh  start.sh  stop.sh
src/opendataframework/analytics/: build.sh  setup.sh  start.sh  stop.sh
src/opendataframework/analytics/superset/: .env  Dockerfile  docker-compose.yaml  setup.sh
src/opendataframework/api/: build.sh  ingest.py  setup.sh  start.sh  stop.sh
src/opendataframework/api/api-postgres/: .env  Dockerfile  docker-compose.yaml  pyproject.toml
src/opendataframework/api/api-postgres/app/: __init__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  router.py
src/opendataframework/api/inference/: .env  Dockerfile  docker-compose.yaml  pyproject.toml
src/opendataframework/api/inference/app/: config.py  crud.py  dependencies.py  main.py  models.py  router.py
src/opendataframework/devcontainers/R/.devcontainer/: .Rprofile  Dockerfile  devcontainer.json
src/opendataframework/docs/: mkdocs.yml
src/opendataframework/docs/stylesheets/: extra.css
src/opendataframework/storage/: build.sh  setup.sh  start.sh  stop.sh
src/opendataframework/storage/postgres/: .env  docker-compose.yaml  setup.sh
src/opendataframework/tests/: test_example.py
src/opendataframework/utility/: build.sh  setup.sh  start.sh  stop.sh
src/opendataframework/utility/nginx/: Dockerfile  docker-compose.yaml  nginx.conf
src/opendataframework/utility/texlive/: Dockerfile  docker-compose.yaml
tests/: test_main.py
tests/data/: events.csv
(+5 files in other folders)
