[tool.poetry]
name = "opendataframework"
version = "0.0.1"
description = "Open Data Framework"
authors = [
    "mykytapavlov <mykytapavlov@users.noreply.github.com>", 
    "Illia Polovnikov <polovnikov.illia@gmail.com>"
]
repository = "https://github.com/opendataframework/opendataframework"
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
opendataframework = "opendataframework.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
mkdocs-material = "^9.5.28"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B301"]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
