[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = [""]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.1"
uvicorn = "^0.20.0"
pandas = "^2.2.3"
# dependencies

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
